# PatchGen

./: .gitmodules  README.md  llama3_8b_patchgen.ipynb
PdFileFormat/: Modified_PdFileFormat.html  PdFF.txt  PdFileFormat — Pd Community Site.html  html-to-markdown.md  remove_anchor.py  sample.pd  syntaxCheck.py  syntaxCheck2.py
PdFileFormat/PdFileFormat — Pd Community Site_files/: ploneScripts2304.js.download
Pd_forum_archive_extraction/: count.py
Pd_forum_archive_extraction/Attachments-1720510204929/: #import~-example-1.pd  #import~-example-2.pd  #import~-help.pd  #import~.pd  #new#  #peek~-help.pd  #peek~.pd  #play_midi_file.pd  #record_midi_file.pd  +.pd  +grabsample.pd  +pager.pd  +seq16.pd  -_.pd  .pdsettings  0-quap.pd  0.49-1 crash Mac OS X 10.14.1.rtf  0.INTRO-public.xls  0.INTRO-volker.xls  0.INTRO.pd  0.tif  000-test.pd  0001-Added-outlet-to-oscparse-to-indicate-how-many-of-the.patch  0001-REBASE-into-place-new-subpatch-windows-near-where-th.patch  0001-add-A_CANT-arg-to-dsp-methods.patch  0001-added-.local-pd-extra-to-linux-default-search-path.patch  0001-adding-with-pd-flag.patch  0001-allow-unicode-filenames-via-double-clicking-fix-mult.patch  0001-bind-all-KeyPress-does-not-get-Tab-KeyPress-only-Key.patch  0001-don-t-bind-abstraction-instances-to-pd-filename.patch  0001-don-t-unpack-empty-lists-to-object-s-inlets.patch  0001-list-foreach-spit-out-elements-of-a-list-one-by-one.patch  0001-make-boxsizes-same-as-Pd-extended-and-check-fonts-fo.patch  0001-make-it-build-on-a-plain-Mac-OS-X-Fink-system.patch  0001-print-meaningfull-error-message.patch  0001-remove-pdtk_array.tcl-its-unused-and-is-old-duplicat.patch  0001-use-SNDCTL_DSP_-defines.patch  0002-added-the-embedding-of-OSX-Fink-libs-using-make-depl.patch  0002-first-working-version-of-after-idle-technique.patch  0002-fixing-trigger-s-a-outlet.patch  (+6062 more)
alternate_patchfile_representations/: README.md  add-two-sorted.pd  add-two.pd  final-sort-algo.py  gem-advanced.pd  mul-03.pd  one.py  zero.py
external_patches/: Pd-patch-examples-inst-resp.csv  Untitled-1.http  analyze.py  clean_all_patches.py  clean_patches.py  clean_patches1.py  cleaned.pd  count.py  count_rows.py  extract-help-patches-with-desc.py  extract-help-patches.py  extract.py  extract1.py  extract_all_patches_with_desc.py  finetuningDatasetCreation.py  help_patchs_with_desc_key.py  original.pd  output.pd  output1.pd  output_filtered.csv  output_filtered_indexed.csv  pd-patch-analyzer-2.py  pd-patch-analyzer.py  pd_object_counts.json  pd_object_data_2.json  remove_rows_with_missing_desc.py  shuffled_data.csv  sort_json.py  sorted_output.json  t.py  tt.py  ttt.py
external_patches/patches/: 3-4-1-1-2-function1.pd  3-4-1-1-2-function2.pd  3-4-2-10-karplus-strong3.pd  3-4-2-3-sampler3.pd  3-4-2-4-sampler-big.pd  3-9-1-1-limiter1.pd  3-9-1-1-limiter2.pd  3-9-1-1-limiter3.pd  3-9-1-1-vu.pd  3-9-1-2-compressor.pd  3-9-3-1-spatial-quadro.pd  3-9-3-1-spatial-stereo.pd  3-9-4-1-windowing.pd  bangs5.pd  noreprand.pd  p.txt
histogram-plot/: object_counts_all.txt  pd-objects-csv.csv  plot.py
models/: v0_8_llama3_8b_patchgen_clean.ipynb
models/v0.8-llama3/: adapter_config.json  tokenizer_config.json
obj-check/: List of objects _ Pure Data.html  check.py  check.txt  obj-check2.py  pd-objects-csv.csv  test.pd  test.py
overlap-check/: check.pd  counter.pd  counter1.pd  counter2.pd  overlap-check.pd  overlap.py  overlap2.py  overlap3.py  overlap4.py  overlap5.py  snake.py  test.pd
pd patch repo scraping/: Map Object _ PURE DATA forum~.html  clean-links.py  extracted_topics.csv  final.csv  modified_links_file.csv  output.csv  patch~ _ PURE DATA forum~.html  scrape-all-links.py  scrape-links.py  scrape.py  test.html
pd_vanilla_object_details(extracted_from_plugdata)/: ext.py  plug-data-obj-docs
pd_vanilla_object_details(extracted_from_plugdata)/plug-data-docs/: graph.md  page.md
research/: literature survey.md
training-code/: patchgen-training-code.ipynb
